crates/aven-check/tests/fixtures/check/valid/comptime-fn-keyunion.av
User = { name: Text, email: Text }
keyUnion = (r) => keysOf(r)
Keys = keyUnion(User)
k : Keys = "name"
