crates/aven-check/tests/fixtures/check/invalid/comptime-fn-non-member.av
User = { name: Text, email: Text }
keyUnion = (r) => keysOf(r)
Keys = keyUnion(User)
bad : Keys = "phone"
